--- a/src/fireabase/index.html
+++ b/src/fireabase/index.html
@@ -12,12 +12,13 @@
     <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase.js"></script>
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyDFKkpY6J5inB9eI8gSFrgZxFp_AnTH9oM",
-            authDomain: "docs-d125f.firebaseapp.com",
-            projectId: "docs-d125f",
-            storageBucket: "docs-d125f.appspot.com",
-            messagingSenderId: "760604561008",
-            appId: "1:760604561008:web:21df79493c1658cc8d6eb5",
+            apiKey: "AIzaSyAa-qfVBOQUHj0neTB7q76lxVdTsHCaSHQ",
+            authDomain: "docs-clone-6bde3.firebaseapp.com",
+            projectId: "docs-clone-6bde3",
+            storageBucket: "docs-clone-6bde3.appspot.com",
+            messagingSenderId: "539413933943",
+            appId: "1:539413933943:web:3d3c05781ba932db2abb72",
+            measurementId: "G-MZF3FFV9QM"
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
